[package]
name = "jack-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = {version = "0.16.0", features = ["jack"]}
assert_no_alloc = "1.1.2"
hashbrown = "0.15.4"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fill_buffer"
harness = false
