[package]
name = "mini-graph"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std     = []

[dependencies]
cpal = { version = "0.16.0", features = ["jack"] }
assert_no_alloc = "1.1.2"
hashbrown = { version = "0.15.4", features = ["inline-more"] }
indexmap = "2.10.0"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "write_chord"
harness = false
